--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,38 +1,39 @@
 html,
 body {
+  
+  color: teal;
   padding: 0;
   margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h1{
+
+  font-size: 60px;
+  
 }
 
-* {
-  box-sizing: border-box;
+input{
+
+  
+  border-width: 10px;
+  font-size: 20px;
+  text-align: center;
+  color:black;
+  font-weight: 600;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+button{
+
+  font-size: 30px;
+  margin-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-color: white;
+  border-radius: 5px;
+  
+  background-color: teal;
+  color: white;
 }
 
-h1,
-h2,
-p,
-ul {
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
-}
-
-button {
-  padding: 0.5rem 1rem;
-  font-weight: bold;
-}
